--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.9,<=3.12.9"
 dependencies = [
     "torch (>=2.7.1,<3.0.0)",
     "torchvision (>=0.22.1,<0.23.0)",
-    "opencv-python (>=4.12.0.88,<5.0.0.0)"
+    "opencv-python (>=4.12.0.88,<5.0.0.0)",
+    "tensorboard (>=2.20.0,<3.0.0)"
 ]
 
 
