--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.9,<=3.12.9"
+requires-python = ">=3.10,<=3.12.9"
 dependencies = [
     "torch (>=2.7.1,<3.0.0)",
     "torchvision (>=0.22.1,<0.23.0)",
-    "opencv-python (>=4.12.0.88,<5.0.0.0)",
-    "tensorboard (>=2.20.0,<3.0.0)"
+    "tensorboard (>=2.20.0,<3.0.0)",
+    "matplotlib (>=3.10.6,<4.0.0)"
 ]
 
 
@@ -43,3 +43,4 @@ pytest = "^8.4.1"
 
 [tool.poetry.group.test]
 optional = true
+
