--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,7 +18,7 @@ jobs:
         run: pylint ./src --fail-on=error  
       
       - name: Run pylint on tests     
-        run: pylint ./tests --fail-on=error  
+        run: pylint ./tests --exit-zero # --fail-on=error  
         # uses: github/super-linter@v4
         # env:
           # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
