--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -10,10 +10,19 @@ jobs:
         with:
         # Use the same Python version as your project
           python-version: "3.11"
-      - name: Install dependencies
+      - name: upgrade pip
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          
+      - name: Install Poetry
+        run: pip install poetry
+        
+      - name: Install dependencies
+        run: poetry install
+        
+      - name: Run pylint
+        run: poetry run pylint --fail-on=error ./  # Only fail on errors, not warnings
+          
       - name: Run pylint on src
         run: pylint ./src --fail-on=error  
       
