--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ optional = true
 [tool.poetry.group.test.dependencies]
 coverage = "^7.9.2"
 pytest = "^8.4.1"
+pylint = "^4.0.2"
+dill = ">=0.3.7"
 
 [tool.poetry.group.test]
 optional = true
