--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,7 +24,7 @@ jobs:
         run: poetry run pylint --fail-on=error ./  # Only fail on errors, not warnings
           
       - name: Run pylint on src
-        run: pylint ./src --fail-on=error  
+        run: pylint ./src --exit-zero 
       
       - name: Run pylint on tests     
         run: pylint ./tests --exit-zero # --fail-on=error  
