--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,6 +16,7 @@ jobs:
           
       - name: Install Poetry
         run: pip install poetry
+        run: poetry cache clear --all
         
       - name: Install dependencies
         run: poetry install --no-interaction --no-ansi
