--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,6 +16,8 @@ jobs:
           
       - name: Install Poetry
         run: pip install poetry
+
+      - name: clear poetry cache
         run: poetry cache clear --all
         
       - name: Install dependencies
