--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,8 +25,7 @@ jobs:
         
       - name: Run pylint
         run: | 
-            poetry run pylint ./src --exit-zero 
-            poetry run pylint ./tests --exit-zero 
+            poetry run pylint . --exit-zero
         
       - name: run tests
         run: |
