--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "torchvision (>=0.24.0,<0.25.0)",
     "tensorboard (>=2.20.0,<3.0.0)",
     "matplotlib (>=3.10.7,<4.0.0)",
-    "pylint (>=4.0.2,<5.0.0)"
 ]
 
 
@@ -24,9 +23,17 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "jupyter (>=1.1.1,<2.0.0)",
-    "ipykernel (>=7.1.0,<8.0.0)"
+    "ipykernel (>=7.1.0,<8.0.0)",
 ]
 test = [
     "coverage (>=7.11.1,<8.0.0)",
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+	"pylint (>=4.0.2,<5.0.0)"
 ]
+
+[tool.pylint]
+# disable = ["W0621"]
+max-line-length = 100
+# disable checking of the .venv environment
+ignore = [".venv"]
+recursive = "y"
