update CI pipeline so linting can fail on error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         
       - name: Run pylint
         run: | 
-            poetry run pylint . --exit-zero
+            poetry run pylint .
         
       - name: run tests
         run: |
