--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ max-line-length = 100
 # disable checking of the .venv environment
 ignore = [".venv"]
 recursive = "y"
+# make the linter returned value only report Errors / Fatals. 
+# this yield successful linting when there are only errors/refactor detected issues
+fail-on = E,F
