--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,11 @@ test = [
 	"pylint (>=4.0.2,<5.0.0)"
 ]
 
-[tool.pylint]
-# disable = ["W0621"]
-max-line-length = 100
+[tool.pylint.MASTER]
 # disable checking of the .venv environment
 ignore = [".venv"]
 recursive = "y"
+jobs = 4                     # parallel workers
 # make the linter returned value only report Errors / Fatals. 
 # this yield successful linting when there are only errors/refactor detected issues
-fail-on = ["E","F"]
+fail-on = ["E", "F"]         
