Add statically type checking into CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,15 @@ jobs:
       - name: Install dependencies
         run: poetry install  --no-interaction --no-root --all-groups
         
-      - name: Run pylint
+      - name: Run pylint - checks for code quality issues, style violations, and some security concerns
         run: | 
             poetry run pylint .
-        
+            
+      - name: Run mypy - performs static type checking using type annotations
+        run: |
+            poetry run mypy -p src --config-file pyproject.toml --no-namespace-packages
+            poetry run mypy -p tests --config-file pyproject.toml 
+            
       - name: run tests
         run: |
           echo $PYTHONPATH
