--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,23 +25,52 @@ dev = [
     "jupyter (>=1.1.1,<2.0.0)",
     "ipykernel (>=7.1.0,<8.0.0)",
     "pylint (>=4.0.2,<5.0.0)",
+    "mypy (>=1.18.2,<2.0.0)",
+    "types-torch (>=0.1.1,<0.2.0)",
 ]
 test = [
     "coverage (>=7.11.1,<8.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
 ]
 
+# [[tool.poetry.source]]
+# name = "pytorch-gpu-source"
+# url = "https://download.pytorch.org/whl/cu128"
+# priority = "explicit"
+
+
+# [tool.poetry.dependencies]
+# torch = {source = "pytorch-gpu-source"}
+# torchvision = {source = "pytorch-gpu-source"}
+
 [tool.pylint.main]
 # disable checking of the .venv environment
 ignore = [".venv"]
 recursive = "y"
 jobs = 4                     # parallel workers
-# The fail-on option does not work for now. I do not know why
-# make the linter returned value only report Errors / Fatals. 
-# this yield successful linting when there are only errors/refactor detected issues
+
+# Theorically it makes the linter returned value only report Errors / Fatals. 
+# this should yield successful linting when there are only errors/refactor detected issues
+# It does not work right now, I don't know why...
 # fail-on = ["E", "F"]
 
+# NOTE : Because the fail-on option does not work for now, we need the below workaround
 # force pylint to return 0 -> this yield github action to never fail because
-# of pylint. This is a work-around until fixing the above 'fail-on' issue
+# of pylint. 
 exit-zero=true
 
+[tool.mypy]
+exclude=[".venv"]
+
+# Activate many optional checks as disallow_untyped_defs...
+strict = true
+
+# ignore_missing_imports = true
+
+# torch / tensorboard do not provide stub packages.
+# The following options are needed to avoid those library messing the mypy report
+disallow_untyped_calls = false   # disable error "Call to untyped function "XXX" in typed context  [no-untyped-call]
+disable_error_code = ["import-untyped"] # Avoid error: Skipping analyzing "XXX": module is installed, but missing library stubs or py.typed marker  [import-untyped]
+
+# make mypy generate warning when adding a dynamic function (i.e. without type hints)
+# disallow_untyped_defs = false
